:sparkles: Feat : "모션으로 버튼과 상호작용할수 있게 하는 인터페이스 구현"

--- a/.gitignore
+++ b/.gitignore
@@ -470,7 +470,5 @@ FodyWeavers.xsd
 
 **/3DModel
 **/Models
-/Assets/TextMesh Pro/
-/Assets/VRMShaders/
-/Assets/VRM/
-/Assets/UniGLTF/
+Assets/*
+!Assets/Scripts/
